--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -318,18 +318,39 @@
 
                             <div class="text-center">
                                 <ul class="pagination">
-                                    <li class="page-item disabled">
+                                    {% if is_paginated %}
+                                    
+                                    {% if page_obj.has_previous %}
+                                    <a class="btn btn-outline-info mb-4" href="?page=1">first</a>
+                                    <a class="btn btn-outline-info mb-4" href="{{ page_obj.prevoius_page_number }}">previous</a>
+                                    {% endif %}
+                                    
+                                    {% for num in page_obj.paginator.page_range %}
+                                    {% if page_obj.number == num %}
+                                    <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                                    <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                                    {% endif %}
+                                    {% endfor %}
+                                    
+                                    {% if page_obj.has_next %}
+                                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+                                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">last</a>
+                                    {% endif %}
+                                    
+                                    {% endif %}
+                                    <!-- <li class="page-item disabled">
                                         <a class="page-link" href="#" tabindex="-1">Previous</a>
-                                    </li>
+                                    </li> -->
 
-                                    <li class="page-item active">
+                                    <!-- <li class="page-item active">
                                         <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                                    </li>
+                                    </li> -->
                                     <!-- <li class="page-item"><a class="page-link" href="#">3</a></li>
                                     <li class="page-item"><a class="page-link" href="#">4</a></li> -->
-                                    <li class="page-item">
+                                    <!-- <li class="page-item">
                                         <a class="page-link" href="#">Next</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
