--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,7 +7,7 @@
     <div class="inline-menu-container">
         <span class="status">Backend Web Develooper | Wordpress Dev</span>
         <ul class="inline-menu">
-            <li class="about menu-item">Resume</li>
+            <li class="about menu-item">About Me</li>
             <li class="portfolio menu-item">Portfolio</li>
             <li class="blog menu-item">Articles</li>
             <li class="contact menu-item">Contact</li>
@@ -38,7 +38,7 @@
                     </h1>
                     <h2 style="font-weight: 600;color: whitesmoke;  text-shadow: rgba(0,0,0,.5) 1px 1px 10px;">Wordpress & Backend Developer</h2>
                     <h5><span style="line-height: normal; color: #fefefe;">I Turn Ideas into Reality</span></h5>
-                    <a target="_blank" href="https://drive.google.com/file/d/1VtRvBCCqmWrZuWcWkfKlR6vhfaqjiI8m/view" download class="btn btn-download">Download Resume</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1VtRvBCCqmWrZuWcWkfKlR6vhfaqjiI8m/view" download class="btn btn-download">View Resume</a>
                     <ul class="social d-flex">
                         <li><a href="https://api.whatsapp.com/send?phone=2349020637708&amp;text=Hello%20Daniel" target="_blank"><i class="mdi mdi-whatsapp"></i></a></li>
                         <li><a href="https://www.instagram.com/thecodeproffessor/" target="_blank"><i class="mdi mdi-instagram"></i></a></li>
@@ -50,7 +50,7 @@
             <div class="menu-blocks" style="margin-top: 10px;">
                 <div class="about-block menu-block" style="background: rgba(12, 214, 103, 0.371);">
                     <div class="about-block-container">
-                        <h2 class="about menu-item">Resume</h2>
+                        <h2 class="about menu-item">About ME</h2>
                     </div>
                 </div>
                 <div class="portfolio-block menu-block " style="background: rgba(0,0,10,.5);">
