--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -41,9 +41,9 @@
                     <a target="_blank" href="https://drive.google.com/file/d/1Ki63KBsLET0Lm1kodXo-lllZWCnWRD4w/view" download class="btn btn-download">View Resume</a>
                     <ul class="social d-flex">
                         <li><a href="https://api.whatsapp.com/send?phone=2349020637708&amp;text=Hello%20Daniel" target="_blank"><i class="mdi mdi-whatsapp"></i></a></li>
-                        <li><a href="https://www.instagram.com/thecodeproffessor/" target="_blank"><i class="mdi mdi-instagram"></i></a></li>
-                        <li><a href="https://twitter.com/thecodeproffess" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/daniel-ajayi-21833714a/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                        <li><a href="https://www.instagram.com/theajayidaniel/" target="_blank"><i class="mdi mdi-instagram"></i></a></li>
+                        <li><a href="https://twitter.com/theajayidaniel" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/theajayidaniel/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
